tests/models/struct/unnamed/isize/fail/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = 1.0)]
    isize
);
fn main() {}
